Layer see-through waypoint cards with painter's order so nearer waypoints fully cover farther ones, text included